# fgo_ai_connect

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  main.py  state.py
app/api/: routes_input.py  routes_status.py  routes_stream.py
app/device/: tunnel.py  wda.py  wda_client.py
app/stream/: base.py  mjpeg.py  screenshot.py
app/utils/: scale.py
app/web/: app.js  index.html  style.css
scripts/: MAC_BUILD_INSTRUCTIONS.md  UITestingUITests.patched.m  mac_build.md  verify_coredevice_pair.py  verify_coredevice_tunnel.py  verify_hid_touch.py  verify_smoke.py  verify_stability.py  windows_fgo_verify.md  windows_setup.md
tests/: test_keepalive.py  test_lifecycle.py  test_scale.py  test_stream.py  test_wda_client.py  test_wda_deployer_kill.py
